# Secure-File-Transfer

./: main.py  project_details.md  pyproject.toml  requirements.txt  secure_file_transfer.db
app/: main.py
app/api/v1/: deps.py
app/api/v1/endpoints/: auth.py  files.py  users.py
app/core/: config.py
app/crud/: crud_file.py  crud_user.py
app/models/: file.py  user.py
app/schemas/: file.py  token.py  user.py
app/services/: auth_service.py  encryption_service.py  storage_service.py
secure-file-transfer/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
secure-file-transfer/app/: main.py
secure-file-transfer/app/api/v1/: auth.py  files.py
secure-file-transfer/app/core/: config.py  db.py  encryption.py  logging.py  minio_client.py  otp.py  password.py  security.py  session.py
secure-file-transfer/app/models/: __init__.py  access.py  file.py  user.py
secure-file-transfer/app/routes/: health.py
secure-file-transfer/app/schemas/: user.py
secure-file-transfer/app/services/: user_service.py
secure-file-transfer/migrations/: env.py
secure-file-transfer/migrations/versions/: 448cca10ec5f_create_user_file_access_tables.py  7ed150a7e3fd_add_otp_secret_column_to_user.py  adcbbb2c012d_initial_setup.py
secure-file-transfer/tests/: test_2fa.py  test_db.py  test_files.py  test_health.py  test_password.py  test_session.py
